// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Button default 1`] = `
<EmotionCssPropInternal
  __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Component"
  __EMOTION_TYPE_PLEASE_DO_NOT_USE__="button"
  css={
    Object {
      ":disabled": Object {
        ":hover": Object {
          "backgroundColor": "#3F88C5",
          "color": "#fff",
        },
        "cursor": "not-allowed",
        "opacity": 0.7,
      },
      ":hover": Object {
        "backgroundColor": "#619DCF",
        "color": "#fff",
        "textDecoration": "none",
      },
      "alignContent": "center",
      "alignItems": "center",
      "backgroundColor": "#3F88C5",
      "backgroundImage": "none",
      "border": "1px solid transparent",
      "borderRadius": "3px",
      "boxSizing": "border-box",
      "color": "#fff",
      "cursor": "pointer",
      "display": "flex",
      "flexDirection": "column",
      "flexFlow": "row",
      "fontSize": "15px",
      "fontWeight": 500,
      "height": "32px",
      "justifyContent": "center",
      "justifyItems": "center",
      "lineHeight": "15px",
      "marginBottom": "0px",
      "outline": "none",
      "padding": "7px 15px 8px",
      "position": "relative",
      "transition": "all .4s ease",
      "userSelect": "none",
      "whiteSpace": "nowrap",
    }
  }
  onClick={[MockFunction]}
>
  Test button
</EmotionCssPropInternal>
`;

exports[`Button button with icon only 1`] = `
<EmotionCssPropInternal
  __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Component"
  __EMOTION_TYPE_PLEASE_DO_NOT_USE__="button"
  css={
    Object {
      ":disabled": Object {
        ":hover": Object {
          "backgroundColor": "#5BC0EB",
          "color": "#fff",
        },
        "cursor": "not-allowed",
        "opacity": 0.7,
      },
      ":hover": Object {
        "backgroundColor": "#87D1F0",
        "color": "#fff",
        "textDecoration": "none",
      },
      "alignContent": "center",
      "alignItems": "center",
      "backgroundColor": "#5BC0EB",
      "backgroundImage": "none",
      "border": "1px solid transparent",
      "borderRadius": "3px",
      "boxSizing": "border-box",
      "color": "#fff",
      "cursor": "pointer",
      "display": "flex",
      "flexDirection": "column",
      "flexFlow": "row",
      "fontSize": "15px",
      "fontWeight": 500,
      "height": "32px",
      "justifyContent": "center",
      "justifyItems": "center",
      "lineHeight": "15px",
      "marginBottom": "0px",
      "outline": "none",
      "padding": "7px 15px 8px",
      "position": "relative",
      "transition": "all .4s ease",
      "userSelect": "none",
      "whiteSpace": "nowrap",
    }
  }
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  <EmotionCssPropInternal
    __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Component"
    __EMOTION_TYPE_PLEASE_DO_NOT_USE__="span"
    css={
      Object {
        "marginLeft": "-6.5px",
        "marginRight": "-6.5px",
      }
    }
  >
    <span>
      icon
    </span>
  </EmotionCssPropInternal>
</EmotionCssPropInternal>
`;

exports[`Button disabled button 1`] = `
<EmotionCssPropInternal
  __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Component"
  __EMOTION_TYPE_PLEASE_DO_NOT_USE__="button"
  css={
    Object {
      ":disabled": Object {
        ":hover": Object {
          "backgroundColor": "#3F88C5",
          "color": "#fff",
        },
        "cursor": "not-allowed",
        "opacity": 0.7,
      },
      ":hover": Object {
        "backgroundColor": "#619DCF",
        "color": "#fff",
        "textDecoration": "none",
      },
      "alignContent": "center",
      "alignItems": "center",
      "backgroundColor": "#3F88C5",
      "backgroundImage": "none",
      "border": "1px solid transparent",
      "borderRadius": "3px",
      "boxSizing": "border-box",
      "color": "#fff",
      "cursor": "pointer",
      "display": "flex",
      "flexDirection": "column",
      "flexFlow": "row",
      "fontSize": "15px",
      "fontWeight": 500,
      "height": "32px",
      "justifyContent": "center",
      "justifyItems": "center",
      "lineHeight": "15px",
      "marginBottom": "0px",
      "outline": "none",
      "padding": "7px 15px 8px",
      "position": "relative",
      "transition": "all .4s ease",
      "userSelect": "none",
      "whiteSpace": "nowrap",
    }
  }
  disabled={true}
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  Test button
</EmotionCssPropInternal>
`;

exports[`Button large outline button 1`] = `
<EmotionCssPropInternal
  __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Component"
  __EMOTION_TYPE_PLEASE_DO_NOT_USE__="button"
  css={
    Object {
      ":disabled": Object {
        ":hover": Object {
          "backgroundColor": "transparent",
          "color": "#3F88C5",
        },
        "cursor": "not-allowed",
        "opacity": 0.7,
      },
      ":hover": Object {
        "backgroundColor": "#3F88C5",
        "color": "#fff",
        "textDecoration": "none",
      },
      "alignContent": "center",
      "alignItems": "center",
      "backgroundColor": "transparent",
      "backgroundImage": "none",
      "border": "1px solid #3F88C5",
      "borderRadius": "3px",
      "boxSizing": "border-box",
      "color": "#3F88C5",
      "cursor": "pointer",
      "display": "flex",
      "flexDirection": "column",
      "flexFlow": "row",
      "fontSize": "17px",
      "fontWeight": 500,
      "height": "39px",
      "justifyContent": "center",
      "justifyItems": "center",
      "lineHeight": "17px",
      "marginBottom": "0px",
      "outline": "none",
      "padding": "9.5px 20px 10.5px",
      "position": "relative",
      "transition": "all .4s ease",
      "userSelect": "none",
      "whiteSpace": "nowrap",
    }
  }
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  size={4}
>
  Test button
</EmotionCssPropInternal>
`;

exports[`Button rounded button with icon 1`] = `
<EmotionCssPropInternal
  __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Component"
  __EMOTION_TYPE_PLEASE_DO_NOT_USE__="button"
  css={
    Object {
      ":disabled": Object {
        ":hover": Object {
          "backgroundColor": "#D15130",
          "color": "#fff",
        },
        "cursor": "not-allowed",
        "opacity": 0.7,
      },
      ":hover": Object {
        "backgroundColor": "#E76846",
        "color": "#fff",
        "textDecoration": "none",
      },
      "alignContent": "center",
      "alignItems": "center",
      "backgroundColor": "#D15130",
      "backgroundImage": "none",
      "border": "1px solid transparent",
      "borderRadius": "20px",
      "boxSizing": "border-box",
      "color": "#fff",
      "cursor": "pointer",
      "display": "flex",
      "flexDirection": "column",
      "flexFlow": "row",
      "fontSize": "15px",
      "fontWeight": 500,
      "height": "32px",
      "justifyContent": "center",
      "justifyItems": "center",
      "lineHeight": "15px",
      "marginBottom": "0px",
      "outline": "none",
      "padding": "7px 15px 8px",
      "position": "relative",
      "transition": "all .4s ease",
      "userSelect": "none",
      "whiteSpace": "nowrap",
    }
  }
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  <EmotionCssPropInternal
    __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Component"
    __EMOTION_TYPE_PLEASE_DO_NOT_USE__="span"
    css={
      Object {
        "marginLeft": "-6.5px",
        "marginRight": "7.5px",
      }
    }
  >
    <span>
      icon
    </span>
  </EmotionCssPropInternal>
  Test button
</EmotionCssPropInternal>
`;

exports[`Button small text button 1`] = `
<EmotionCssPropInternal
  __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Component"
  __EMOTION_TYPE_PLEASE_DO_NOT_USE__="button"
  css={
    Object {
      ":disabled": Object {
        ":hover": Object {
          "backgroundColor": "transparent",
          "color": "#3F88C5",
        },
        "cursor": "not-allowed",
        "opacity": 0.7,
      },
      ":hover": Object {
        "backgroundColor": "#3F88C5",
        "color": "#fff",
        "textDecoration": "none",
      },
      "alignContent": "center",
      "alignItems": "center",
      "backgroundColor": "transparent",
      "backgroundImage": "none",
      "border": "1px solid transparent",
      "borderRadius": "3px",
      "boxSizing": "border-box",
      "color": "#3F88C5",
      "cursor": "pointer",
      "display": "flex",
      "flexDirection": "column",
      "flexFlow": "row",
      "fontSize": "13px",
      "fontWeight": 500,
      "height": "25px",
      "justifyContent": "center",
      "justifyItems": "center",
      "lineHeight": "13px",
      "marginBottom": "0px",
      "outline": "none",
      "padding": "4.5px 10px 5.5px",
      "position": "relative",
      "transition": "all .4s ease",
      "userSelect": "none",
      "whiteSpace": "nowrap",
    }
  }
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  size={2}
>
  Test button
</EmotionCssPropInternal>
`;
